--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,19 @@
 {
   "name": "purescript-amqplib",
   "dependencies": {
-    "purescript-aff": "^2.0.2",
-    "purescript-prelude": "^2.1.0",
-    "purescript-newtype": "^1.2.0",
-    "purescript-bytestrings": "^0.0.3",
-    "purescript-datetime": "^2.0.0",
-    "purescript-maybe": "^2.0.1",
-    "purescript-transformers": "^2.1.0",
-    "purescript-either": "^2.1.0"
+    "purescript-aff": "^3.1.0",
+    "purescript-prelude": "^3.0.0",
+    "purescript-newtype": "^2.0.0",
+    "purescript-bytestrings": "^5.0.1",
+    "purescript-datetime": "^3.1.0",
+    "purescript-maybe": "^3.0.0",
+    "purescript-transformers": "^3.4.0",
+    "purescript-either": "^3.0.0",
+    "purescript-eff": "^3.1.0"
   },
   "devDependencies": {
-    "purescript-eff": "^2.0.0",
-    "purescript-exceptions": "^2.0.0",
-    "purescript-node-buffer": "^2.0.0"
+    "purescript-eff": "^3.1.0",
+    "purescript-exceptions": "^3.0.0",
+    "purescript-node-buffer": "^3.0.0"
   }
 }
