--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "purescript-maybe": "^3.0.0",
     "purescript-transformers": "^3.4.0",
     "purescript-either": "^3.0.0",
-    "purescript-eff": "^3.1.0"
+    "purescript-eff": "^3.1.0",
+    "purescript-foreign": "^4.0.0",
+    "purescript-spec": "^1.0.0"
   },
   "devDependencies": {
     "purescript-eff": "^3.1.0",
