--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "purescript-eff": "^3.1.0",
     "purescript-exceptions": "^3.0.0",
-    "purescript-node-buffer": "^3.0.0"
+    "purescript-node-buffer": "^3.0.0",
+    "purescript-debug": "^3.0.0"
   }
 }
