--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "purescript-either": "^3.0.0",
     "purescript-eff": "^3.1.0",
     "purescript-foreign": "^4.0.0",
-    "purescript-spec": "^1.0.0"
+    "purescript-spec": "^1.0.0",
+    "purescript-options": "^3.0.0"
   },
   "devDependencies": {
     "purescript-eff": "^3.1.0",
